tackc_lib/snapshots/tackc_lib__frontend__parser__run_parser_test@basic.tck.snap
---
source: tackc_lib/src/frontend/parser.rs
input_file: tackc_lib/src/frontend/parser-tests/basic.tck
---
(AstModule(
  file: 2542601049,
  mod_stmt: Some(ModStatement(
    exported: false,
    path: Some(AstPath(
      components: [
        Some(Interned(12414034946435718365, PhantomData)),
      ],
      id: NodeId(
        id: 1,
        file: 2542601049,
      ),
      span: Span(
        start: 4,
        end: 9,
        file: 2542601049,
      ),
    )),
    id: NodeId(
      id: 2,
      file: 2542601049,
    ),
    span: Span(
      start: 0,
      end: 10,
      file: 2542601049,
    ),
  )),
  items: [
    Some(Item(
      kind: ImpItem(ImpItem(
        exported: false,
        path: Some(AstPath(
          components: [
            Some(Interned(3164793738269129270, PhantomData)),
            Some(Interned(14573016305239464953, PhantomData)),
            Some(Interned(8820509491802776480, PhantomData)),
          ],
          id: NodeId(
            id: 3,
            file: 2542601049,
          ),
          span: Span(
            start: 16,
            end: 29,
            file: 2542601049,
          ),
        )),
      )),
      id: NodeId(
        id: 4,
        file: 2542601049,
      ),
      span: Span(
        start: 12,
        end: 30,
        file: 2542601049,
      ),
    )),
    Some(Item(
      kind: ConstItem(ConstItem(
        exported: false,
        ty: r#None,
        expr: Some(Expression(
          kind: StringLit(Interned(8470909341547293647, PhantomData)),
          id: NodeId(
            id: 5,
            file: 2542601049,
          ),
          span: Span(
            start: 52,
            end: 67,
            file: 2542601049,
          ),
        )),
        ident: Some(Interned(5428701365987426703, PhantomData)),
      )),
      id: NodeId(
        id: 6,
        file: 2542601049,
      ),
      span: Span(
        start: 32,
        end: 68,
        file: 2542601049,
      ),
    )),
    Some(Item(
      kind: FuncItem(FuncItem(
        exported: true,
        ident: Some(Interned(17465882359786578877, PhantomData)),
        params: [],
        ret_type: r#None,
        block: Some(Block(
          stmts: [
            Some(Statement(
              kind: ExpressionStatement(ExpressionStatement(
                expr: Expression(
                  kind: Call(Expression(
                    kind: Ident(Interned(516218630375235559, PhantomData)),
                    id: NodeId(
                      id: 7,
                      file: 2542601049,
                    ),
                    span: Span(
                      start: 92,
                      end: 99,
                      file: 2542601049,
                    ),
                  ), [
                    Some(Expression(
                      kind: Index(Expression(
                        kind: Ident(Interned(15179293864547172615, PhantomData)),
                        id: NodeId(
                          id: 8,
                          file: 2542601049,
                        ),
                        span: Span(
                          start: 100,
                          end: 111,
                          file: 2542601049,
                        ),
                      ), Some(Expression(
                        kind: IntLit(Interned(12177547797312297026, PhantomData)),
                        id: NodeId(
                          id: 9,
                          file: 2542601049,
                        ),
                        span: Span(
                          start: 112,
                          end: 113,
                          file: 2542601049,
                        ),
                      ))),
                      id: NodeId(
                        id: 10,
                        file: 2542601049,
                      ),
                      span: Span(
                        start: 100,
                        end: 114,
                        file: 2542601049,
                      ),
                    )),
                  ]),
                  id: NodeId(
                    id: 11,
                    file: 2542601049,
                  ),
                  span: Span(
                    start: 92,
                    end: 115,
                    file: 2542601049,
                  ),
                ),
                semi: r#Some(Token(
                  span: Span(
                    start: 115,
                    end: 116,
                    file: 2542601049,
                  ),
                  kind: Semicolon,
                  lexeme: Interned(3447890864966814147, PhantomData),
                )),
              )),
              id: NodeId(
                id: 12,
                file: 2542601049,
              ),
              span: Span(
                start: 92,
                end: 116,
                file: 2542601049,
              ),
            )),
          ],
          expr: r#None,
          id: NodeId(
            id: 13,
            file: 2542601049,
          ),
          span: Span(
            start: 86,
            end: 118,
            file: 2542601049,
          ),
        )),
      )),
      id: NodeId(
        id: 14,
        file: 2542601049,
      ),
      span: Span(
        start: 74,
        end: 118,
        file: 2542601049,
      ),
    )),
  ],
), [])
