tackc_lib/snapshots/tackc_lib__frontend__parser__run_parser_test@block-mode.tck.snap
---
source: tackc_lib/src/frontend/parser.rs
input_file: tackc_lib/src/frontend/parser-tests/block-mode.tck
---
(AstModule(
  file: 3907861227,
  mod_stmt: Some(ModStatement(
    exported: false,
    path: Some(AstPath(
      components: [
        Some(Interned(6776389003214485656, PhantomData)),
      ],
      id: NodeId(
        id: 1,
        file: 3907861227,
      ),
      span: Span(
        start: 4,
        end: 9,
        file: 3907861227,
      ),
    )),
    id: NodeId(
      id: 2,
      file: 3907861227,
    ),
    span: Span(
      start: 0,
      end: 10,
      file: 3907861227,
    ),
  )),
  items: [
    Some(Item(
      kind: FuncItem(FuncItem(
        exported: false,
        ident: Some(Interned(5517798473477872181, PhantomData)),
        params: [],
        ret_type: r#None,
        block: Some(Block(
          stmts: [],
          expr: r#Some(Expression(
            kind: Grouping(Some(Expression(
              kind: Block(Block(
                stmts: [],
                expr: Error,
                id: NodeId(
                  id: 3,
                  file: 3907861227,
                ),
                span: Span(
                  start: 27,
                  end: 32,
                  file: 3907861227,
                ),
              )),
              id: NodeId(
                id: 4,
                file: 3907861227,
              ),
              span: Span(
                start: 27,
                end: 32,
                file: 3907861227,
              ),
            ))),
            id: NodeId(
              id: 5,
              file: 3907861227,
            ),
            span: Span(
              start: 26,
              end: 33,
              file: 3907861227,
            ),
          )),
          id: NodeId(
            id: 6,
            file: 3907861227,
          ),
          span: Span(
            start: 24,
            end: 35,
            file: 3907861227,
          ),
        )),
      )),
      id: NodeId(
        id: 7,
        file: 3907861227,
      ),
      span: Span(
        start: 12,
        end: 35,
        file: 3907861227,
      ),
    )),
    None,
  ],
), [
  Expected(Some("statement, item, or expression"), Token(
    span: Span(
      start: 28,
      end: 31,
      file: 3907861227,
    ),
    kind: I32,
    lexeme: Interned(1629207603688809684, PhantomData),
  )),
  Expected(Some("item"), Token(
    span: Span(
      start: 36,
      end: 37,
      file: 3907861227,
    ),
    kind: LBrace,
    lexeme: Interned(13823032201068319013, PhantomData),
  )),
])
