tackc_lib/snapshots/tackc_lib__frontend__parser__run_prog_parser_test@basic.tck.snap
---
source: tackc_lib/src/frontend/parser.rs
input_file: tackc_lib/src/frontend/parser/tests/basic.tck
---
(AstModule(
  file: 2083824584,
  mod_stmt: Some(ModStatement(
    exported: false,
    path: Some(AstPath(
      components: [
        Some(Interned(16490859229767377408, PhantomData)),
      ],
      id: NodeId(
        id: 1,
        file: 2083824584,
      ),
    )),
    id: NodeId(
      id: 2,
      file: 2083824584,
    ),
  )),
  items: [
    Some(Item(
      kind: FuncItem(FuncItem(
        exported: false,
        ident: Some(Interned(15232268699963655069, PhantomData)),
        params: [],
        ret_type: None,
        block: Some(Block(
          stmts: [
            Some(Statement(
              kind: ExpressionStatement(ExpressionStatement(
                expr: Expression(
                  kind: Call(Expression(
                    kind: Ident(Interned(10211247173524369551, PhantomData)),
                    id: NodeId(
                      id: 3,
                      file: 2083824584,
                    ),
                  ), [
                    Some(Expression(
                      kind: StringLit(Interned(8470909341547293647, PhantomData)),
                      id: NodeId(
                        id: 4,
                        file: 2083824584,
                      ),
                    )),
                  ]),
                  id: NodeId(
                    id: 5,
                    file: 2083824584,
                  ),
                ),
                semi: Some(Some(Token(
                  span: Span(
                    start: 54,
                    end: 55,
                    file: 2083824584,
                  ),
                  kind: Semicolon,
                  lexeme: Interned(3447890864966814147, PhantomData),
                ))),
              )),
              id: NodeId(
                id: 6,
                file: 2083824584,
              ),
            )),
          ],
          expr: None,
          id: NodeId(
            id: 7,
            file: 2083824584,
          ),
        )),
      )),
      id: NodeId(
        id: 8,
        file: 2083824584,
      ),
    )),
  ],
  spans: {
    NodeId(
      id: 1,
      file: 2083824584,
    ): Span(
      start: 4,
      end: 9,
      file: 2083824584,
    ),
    NodeId(
      id: 2,
      file: 2083824584,
    ): Span(
      start: 0,
      end: 10,
      file: 2083824584,
    ),
    NodeId(
      id: 3,
      file: 2083824584,
    ): Span(
      start: 30,
      end: 37,
      file: 2083824584,
    ),
    NodeId(
      id: 4,
      file: 2083824584,
    ): Span(
      start: 38,
      end: 53,
      file: 2083824584,
    ),
    NodeId(
      id: 5,
      file: 2083824584,
    ): Span(
      start: 30,
      end: 54,
      file: 2083824584,
    ),
    NodeId(
      id: 6,
      file: 2083824584,
    ): Span(
      start: 30,
      end: 55,
      file: 2083824584,
    ),
    NodeId(
      id: 7,
      file: 2083824584,
    ): Span(
      start: 24,
      end: 57,
      file: 2083824584,
    ),
    NodeId(
      id: 8,
      file: 2083824584,
    ): Span(
      start: 12,
      end: 57,
      file: 2083824584,
    ),
  },
), [])
