tackc_lib/snapshots/tackc_lib__frontend__parser__run_prog_parser_test@oop.tck.snap
---
source: tackc_lib/src/frontend/parser.rs
input_file: tackc_lib/src/frontend/parser/tests/oop.tck
---
(AstModule(
  file: 1888024003,
  mod_stmt: Some(ModStatement(
    exported: false,
    path: Some(AstPath(
      components: [
        Some(Interned(7467388298159330253, PhantomData)),
        Some(Interned(11306544084866895414, PhantomData)),
      ],
      id: NodeId(
        id: 1,
        file: 1888024003,
      ),
    )),
    id: NodeId(
      id: 2,
      file: 1888024003,
    ),
  )),
  items: [
    Some(Item(
      kind: FuncItem(FuncItem(
        exported: false,
        ident: Some(Interned(8754025525380084162, PhantomData)),
        params: [],
        ret_type: None,
        block: Some(Block(
          stmts: [
            Some(Statement(
              kind: ExpressionStatement(ExpressionStatement(
                expr: Expression(
                  kind: Call(Expression(
                    kind: Ident(Interned(13839433047087642790, PhantomData)),
                    id: NodeId(
                      id: 3,
                      file: 1888024003,
                    ),
                  ), [
                    Some(Expression(
                      kind: StringLit(Interned(14598065627300119639, PhantomData)),
                      id: NodeId(
                        id: 4,
                        file: 1888024003,
                      ),
                    )),
                    Some(Expression(
                      kind: Binary(Add, Expression(
                        kind: IntLit(Interned(9512443353228393487, PhantomData)),
                        id: NodeId(
                          id: 5,
                          file: 1888024003,
                        ),
                      ), Expression(
                        kind: Binary(Mul, Expression(
                          kind: IntLit(Interned(9290355111161746293, PhantomData)),
                          id: NodeId(
                            id: 6,
                            file: 1888024003,
                          ),
                        ), Expression(
                          kind: IntLit(Interned(7161555357105607078, PhantomData)),
                          id: NodeId(
                            id: 7,
                            file: 1888024003,
                          ),
                        )),
                        id: NodeId(
                          id: 8,
                          file: 1888024003,
                        ),
                      )),
                      id: NodeId(
                        id: 9,
                        file: 1888024003,
                      ),
                    )),
                  ]),
                  id: NodeId(
                    id: 10,
                    file: 1888024003,
                  ),
                ),
                semi: Some(Some(Token(
                  span: Span(
                    start: 74,
                    end: 75,
                    file: 1888024003,
                  ),
                  kind: Semicolon,
                  lexeme: Interned(3447890864966814147, PhantomData),
                ))),
              )),
              id: NodeId(
                id: 11,
                file: 1888024003,
              ),
            )),
          ],
          expr: None,
          id: NodeId(
            id: 12,
            file: 1888024003,
          ),
        )),
      )),
      id: NodeId(
        id: 13,
        file: 1888024003,
      ),
    )),
  ],
  spans: {
    NodeId(
      id: 1,
      file: 1888024003,
    ): Span(
      start: 4,
      end: 29,
      file: 1888024003,
    ),
    NodeId(
      id: 2,
      file: 1888024003,
    ): Span(
      start: 0,
      end: 30,
      file: 1888024003,
    ),
    NodeId(
      id: 3,
      file: 1888024003,
    ): Span(
      start: 50,
      end: 57,
      file: 1888024003,
    ),
    NodeId(
      id: 4,
      file: 1888024003,
    ): Span(
      start: 58,
      end: 62,
      file: 1888024003,
    ),
    NodeId(
      id: 5,
      file: 1888024003,
    ): Span(
      start: 64,
      end: 65,
      file: 1888024003,
    ),
    NodeId(
      id: 6,
      file: 1888024003,
    ): Span(
      start: 68,
      end: 69,
      file: 1888024003,
    ),
    NodeId(
      id: 7,
      file: 1888024003,
    ): Span(
      start: 72,
      end: 73,
      file: 1888024003,
    ),
    NodeId(
      id: 8,
      file: 1888024003,
    ): Span(
      start: 68,
      end: 73,
      file: 1888024003,
    ),
    NodeId(
      id: 9,
      file: 1888024003,
    ): Span(
      start: 64,
      end: 73,
      file: 1888024003,
    ),
    NodeId(
      id: 10,
      file: 1888024003,
    ): Span(
      start: 50,
      end: 74,
      file: 1888024003,
    ),
    NodeId(
      id: 11,
      file: 1888024003,
    ): Span(
      start: 50,
      end: 75,
      file: 1888024003,
    ),
    NodeId(
      id: 12,
      file: 1888024003,
    ): Span(
      start: 44,
      end: 77,
      file: 1888024003,
    ),
    NodeId(
      id: 13,
      file: 1888024003,
    ): Span(
      start: 32,
      end: 77,
      file: 1888024003,
    ),
  },
), [])
